fix penny farthing spacing

--- a/css/main.css
+++ b/css/main.css
@@ -227,6 +227,7 @@ nav ul li:hover>ul {
 }
 
 .penny-farthing {
+  margin-top: 3em;
   margin-bottom: 4em;
 }
 
